# storyverse

./: README.md  pyproject.toml  requirements.txt  setup.py
storyverse/: __init__.py  branch_manager.py  cli.py  commit_store.py  content_store.py  version_control.py
tests/: test_storyverse.py
