[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "storyverse"
authors = [
    {name = "Emin Genc", email = "emingench@gmail.com"}
]
description = "A version control system for interactive, branching time-travel stories"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["story", "version-control", "branching", "time-travel"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fs>=2.4.13",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/emingenc/storyverse"
"Bug Tracker" = "https://github.com/emingenc/storyverse/issues"

[tool.setuptools_scm]
write_to = "storyverse/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = ["storyverse*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88